# kg-gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
MINE/: README.md  README.txt  essays.json  evaluation.py  example.json
src/apps/: .env.example  build_kg.py
src/kg_gen/: __init__.py  kg_gen.py  models.py
src/kg_gen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kg_gen/steps/: _1_get_entities.py  _2_get_relations.py  _3_cluster_graph.py  aggregate.py  cluster.py
src/t2kg/: __init__.py  t2kg.py
src/t2kg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/t2kg/steps/: _2_get_relations.py  _3_cluster_graph.py
src/t2kg/utils/: chunk_text.py
tests/: test_basic.py  test_basic_2.py  test_basic_convo.py  test_chunk_and_cluster.py  test_chunked.py  test_clustering.py  test_gen_clus_agg.py  test_graph_quality.py  test_kg_gen.py  test_long_text.py  test_multiple_models.py
tests/data/: kingkiller_chapter_one.txt
tests/utils/: test_chunk_text.py
