[project]
name = "t2kg"
version = "0.0.2"
authors = [
  { name="Belinda Mo", email="justanexperimentpark@gmail.com" },
]
description = "Extract a knowledge graph using LLMs from any text or messages array"
readme = "README.md"
requires-python = ">=3.10, <4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/stair-lab/t2kg"
Issues = "https://github.com/stair-lab/t2kg/issues"